--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -68,7 +68,7 @@
         android:layout_height="wrap_content"
         android:padding="4dp"
         android:layout_margin="4dp"
-        android:text="Click the  +  to add am exercise"
+        android:text="Click the  +  to add an exercise"
         android:textColor="@color/white"
         android:textStyle="italic"
         android:textAlignment="center"
